--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     <footer>
         <p>&copy; Matthew Crooks 2021</p>
     </footer>
+    <script type="text/javascript" src="script.js"></script>
 </html>
