Add instructions, new item line and button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@
         <h1>JS To-Do List</h1>
     </head>
     <body>
+        <div class="container">
+            <div>
+                <div>
+                    <h1>Work To-Dos</h1>
+                    <div>
+                        <p id="first">Enter text into the input field to add items to your list.</p>
+                        <p id="second">Click the item to mark it as complete.</p>
+                        <p id="third">Click the "X" to remove the item from your list.</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <input id="userInput" type="text" placeholder="New item..." maxlength="27">
+                        <button id="enter">Add To-Do</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
     <footer>
         <p>&copy; Matthew Crooks 2021</p>
