--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <h1>JS To-Do List</h1>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div class="container">  
             <div>
-                <h1>Work To-Dos</h1>
                 <div>
                     <p id="first">Enter text into the input field to add items to your list.</p>
                     <p id="second">Click the item to mark it as complete.</p>
